cmake_minimum_required( VERSION 3.0 )

project( ch8 )

set( CMAKE_BUILD_TYPE "Debug" )
add_definitions( "-DENABLE_SSE" )
set( CMAKE_CXX_FLAGS "-std=c++11 ${SSE_FLAGS} -g -O3 -march=native")

find_package( OpenCV 3 REQUIRED )
find_package( Sophus REQUIRED )
find_package( Pangolin REQUIRED )

include_directories(
    ${OpenCV_INCLUDE_DIRS}
    ${Sophus_INCLUDE_DIRS}
    ${Pangolin_INCLUDE_DIRS}
    "/usr/include/eigen3"
)

add_executable( optical_flow optical_flow.cpp )
target_link_libraries( optical_flow ${OpenCV_LIBS} )

add_executable( direct_method direct_method.cpp )
target_link_libraries( direct_method ${OpenCV_LIBS} ${Pangolin_LIBRARIES} Sophus::Sophus )